--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -116,6 +116,37 @@ svg {
     transform: rotate(180deg);
 }
 
+.title {
+    position: relative;
+    margin-left: 46px;
+    color: var(--primary-black);
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 1.625;
+}
+
+.title::before {
+    position: absolute;
+    top: 2px;
+    left: -46px;
+    content: "";
+    display: inline-block;
+    height: 1px;
+    width: 25px;
+    background: var(--primary-black);
+}
+
+.heading {
+    max-width: 520px;
+    margin-top: 12px;
+    color: var(--primary-black);
+    font-family: Poppins;
+    font-size: 42px;
+    font-weight: 600;
+    line-height: 1.234;
+}
+
 /* Header */
 .header {
     padding-top: 20px;
@@ -387,4 +418,63 @@ svg {
     font-size: 1.9rem;
     font-weight: 600;
     letter-spacing: 0.1995rem;
+}
+
+/* Service */
+.service__list {
+    display: flex;
+    gap: 16px;
+    margin-top: 76px;
+}
+
+.service-item{
+    border-radius: 20px;
+}
+
+.service-item:hover {
+    background: #FFF;
+    box-shadow: -6px 9px 64px -4px rgba(118, 118, 118, 0.25);
+}
+
+.service-item:hover .service-item__content{
+    border: #fff;
+    border-radius: 0 0 20px 20px;
+}
+
+.service-item__thumb {
+    height: 318px;
+    width: 370px;
+    border-radius: 20px 20px 0px 0px;
+    object-fit: cover;
+    transition: all 0.25s;
+}
+
+.service-item__content {
+    padding: 24px 16px;
+    border: 1px solid #e2e3e3;
+    border-radius: 0 0 20px 20px;
+    border-top: 0;
+}
+
+.service-item__heading {
+    color: var(--primary-black);
+    font-size: 2.2rem;
+    font-weight: 600;
+}
+
+.service-item__desc {
+    max-width: 268px;
+    margin-top: 18px;
+    color: #7D8188;
+    font-size: 1.4rem;
+    font-weight: 500;
+    line-height: 1.714;
+}
+
+.service-item__wrap {
+    overflow: hidden;
+}
+
+.service-item__wrap:hover .service-item__thumb {
+    transform: scale(1.1);
 }
