--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -128,12 +128,14 @@ svg {
 
 .title::before {
     position: absolute;
-    top: 2px;
+    top: 0;
+    bottom: 0;
     left: -46px;
     content: "";
     display: inline-block;
     height: 1px;
     width: 25px;
+    margin: auto 0;
     background: var(--primary-black);
 }
 
@@ -424,10 +426,11 @@ svg {
 .service__list {
     display: flex;
     gap: 16px;
-    margin-top: 76px;
+    margin-top: 50px;
+    padding: 56px;
 }
 
-.service-item{
+.service-item {
     border-radius: 20px;
 }
 
@@ -436,7 +439,7 @@ svg {
     box-shadow: -6px 9px 64px -4px rgba(118, 118, 118, 0.25);
 }
 
-.service-item:hover .service-item__content{
+.service-item:hover .service-item__content {
     border: #fff;
     border-radius: 0 0 20px 20px;
 }
@@ -476,5 +479,182 @@ svg {
 }
 
 .service-item__wrap:hover .service-item__thumb {
-    transform: scale(1.1);
+    transform: scale(1.2);
+}
+
+/* About */
+.about {
+    margin-top: 50px;
+    padding: 50px 0;
+}
+
+.about__body {
+    display: flex;
+    justify-content: space-between;
+}
+
+.about__media {
+    position: relative;
+    width: 52%;
+    padding-top: 18px;
+    flex-shrink: 0;
+}
+
+.about__images {
+    display: flex;
+    gap: 21px;
+}
+
+.about__img {
+    width: 284px;
+    height: 480px;
+    border-radius: 999px;
+    object-fit: cover;
+    box-shadow: 0px 4px 234px 11px rgba(59, 137, 71, 0.25);
+}
+
+.about__img--lower {
+    margin-top: 90px;
+}
+
+.about__deco {
+    top: 0;
+    left: 46px;
+    transform: rotate(12deg);
+}
+
+.about-summary {
+    position: absolute;
+    bottom: 8px;
+    right: -4px;
+    width: 143px;
+    height: 144px;
+    padding: 19px 23px 12px;
+    border-radius: 8px;
+    box-shadow: 0px 7px 54px 0px rgba(154, 154, 154, 0.25);
+    background: #FFF;
+}
+
+.about-summary__heading {
+    color: var(--primary-black);
+    font-family: Public Sans;
+    font-size: 1.4rem;
+    font-weight: 600;
+}
+
+.about-summary__desc {
+    margin-top: 6px;
+    color: var(--primary-gray);
+    font-family: Public Sans;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.4;
+}
+
+.about-summary__progress {
+    position: relative;
+    margin: 27px 0 20px;
+    height: 2px;
+    border-radius: 10px;
+    background: #EAEAEA;
+}
+
+.about-summary__progress::before {
+    position: absolute;
+    top: -16px;
+    left: 0;
+    content: "40%";
+    color: var(--primary-black);
+    font-family: Public Sans;
+    font-size: 1rem;
+    font-weight: 500;
+    line-height: 1.4;
+}
+
+.about-summary__progress::after {
+    position: absolute;
+    right: 0;
+    bottom: -17px;
+    content: "Loading...";
+    color: var(--primary-black);
+    font-family: Public Sans;
+    font-size: 1rem;
+    font-weight: 500;
+    line-height: 1.4;
+}
+
+.about-summary__progress-bar {
+    width: 42%;
+    height: 100%;
+    border-radius: 10px;
+    background: #83A17D;
+}
+
+
+.about-summary__team {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 5px;
+}
+
+.about-summary__title {
+    color: var(--primary-black);
+    font-family: Public Sans;
+    font-size: 1rem;
+    font-weight: 500;
+    line-height: 1.4;
+}
+
+.about-summary__list {
+    display: flex;
+}
+
+.about-summary__person {
+    width: 16px;
+    height: 16px;
+    border: 1px solid #FFF;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+.about-summary__person+.about-summary__person {
+    margin-left: -6px;
+}
+
+.about__content {
+    padding: 0 2px 0 64px;
+}
+
+.about__content-heading {
+    margin-top: 20px;
+}
+
+.about__desc {
+    margin-top: 11px;
+    color: #7D8188;
+    font-weight: 500;
+    line-height: 1.625;
+}
+
+.about__stats {
+    display: flex;
+    gap: 24px;
+    margin-top: 36px;
+    padding-bottom: 20px;
+    border-bottom: 1px solid #83A17D;
+}
+
+.about__stats-val {
+    color: var(--primary-black);
+    font-size: 4.2rem;
+    font-weight: 600;
+    line-height: 1.234;
+}
+
+.about__stats-desc {
+    color: #7D8188;
+    font-size: 1.4rem;
+    font-weight: 500;
+    line-height: 1.714;
 }
