--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -658,3 +658,85 @@ svg {
     font-weight: 500;
     line-height: 1.714;
 }
+
+/* Process */
+.process {
+    margin-top: 27px;
+    padding: 36px 0;
+}
+
+.process__heading {
+    margin-top: 20px;
+}
+
+.process__item {
+    display: flex;
+    align-items: center;
+    height: 185px;
+    padding: 30px;
+    padding-right: 41px;
+    border-bottom: 1px solid #83A17D;
+    transition: all 0.25s;
+}
+
+.process__item:hover {
+    border-radius: 33px;
+    background: #E2EDDF;
+    border-color: #E2EDDF;
+}
+
+.process__item:hover .process__more {
+    display: inline-block;
+}
+
+.process__order {
+    color: var(--primary-color);
+    font-size: 7.2rem;
+    font-weight: 600;
+    line-height: 0.7222;
+}
+
+.process__item--img {
+    position: relative;
+    margin-top: 81px;
+
+}
+
+.process__thumb {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: 350px;
+    height: 444px;
+    object-fit: cover;
+}
+
+.process__wrap {
+    margin-left: 49px;
+}
+
+.process__name {
+    color: var(--primary-black);
+    font-size: 2.2rem;
+    font-weight: 600;
+}
+
+.process__more {
+    display: none;
+    margin-top: 22px;
+    color: var(--primary-gray);
+    font-size: 1.8rem;
+    font-weight: 400;
+    text-decoration: underline;
+    transition: all 0.25s;
+}
+
+.process__desc {
+    max-width: 572px;
+    margin-left: auto;
+    color: #7D8188;
+    font-family: Public Sans;
+    font-size: 1.8rem;
+    font-weight: 500;
+    line-height: 1.55556;
+}
